81: refactored argLine for UI tests
to include module arguments for Java 11 and for macOS UI tests

Task-Url: http://github.com/pitest/pitclipse/issues/81