@@ -1,9 +1,10 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-    <groupId>org.pitest</groupId>
-    <artifactId>org.pitest.pitclipse.ui.tests</artifactId>
-    <packaging>eclipse-test-plugin</packaging>
+	<groupId>org.pitest</groupId>
+	<artifactId>org.pitest.pitclipse.ui.tests</artifactId>
+	<packaging>eclipse-test-plugin</packaging>
 
 	<parent>
 		<groupId>org.pitest</groupId>
@@ -11,27 +12,63 @@
 		<version>2.1.2-SNAPSHOT</version>
 	</parent>
 
+	<properties>
+		<!-- For tests for Java 9 and above -->
+		<moduleProperties></moduleProperties>
+		<!-- OS specific flags -->
+		<os-jvm-flags />
+		<!-- Additional Test arguments -->
+		<additionalTestArgLine>${moduleProperties}</additionalTestArgLine>
+	</properties>
+
+	<profiles>
+		<profile>
+			<id>jdk9-or-newer</id>
+			<activation>
+				<jdk>[9,)</jdk>
+			</activation>
+			<properties>
+				<moduleProperties>--add-modules=ALL-SYSTEM</moduleProperties>
+			</properties>
+		</profile>
+		<profile>
+			<id>macosx-jvm-flags</id>
+			<activation>
+				<os>
+					<family>mac</family>
+				</os>
+			</activation>
+			<properties>
+				<os-jvm-flags>-XstartOnFirstThread</os-jvm-flags>
+			</properties>
+		</profile>
+		<profile>
+			<id>jacoco</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+			<properties>
+				<additionalTestArgLine>${tycho.testArgLine} ${moduleProperties}</additionalTestArgLine>
+			</properties>
+		</profile>
+	</profiles>
+
 	<build>
-        <plugins>
-			<!-- 
-				Required to run SWTBot 
-			 -->
-            <plugin>
-                <groupId>org.eclipse.tycho</groupId>
-                <artifactId>tycho-surefire-plugin</artifactId>
-                <version>${tycho-version}</version>
-                <configuration>
-                    <useUIHarness>true</useUIHarness>
-                    <useUIThread>false</useUIThread>
-                    <product>org.eclipse.platform.ide</product>
-                    <application>org.eclipse.ui.ide.workbench</application>
-                    <showEclipseLog>true</showEclipseLog>
-                </configuration>
-            </plugin>
-			<!-- 
-				Explicit dependency to the listeners fragment:
-				make Pitclipse's mutation listeners available during test runtime 
-			 -->
+		<plugins>
+			<!-- Required to run SWTBot -->
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-surefire-plugin</artifactId>
+				<version>${tycho-version}</version>
+				<configuration>
+					<useUIHarness>true</useUIHarness>
+					<useUIThread>false</useUIThread>
+					<showEclipseLog>true</showEclipseLog>
+					<argLine>${additionalTestArgLine} ${os-jvm-flags}</argLine>
+				</configuration>
+			</plugin>
+			<!-- Explicit dependency to the listeners fragment: make Pitclipse's mutation 
+				listeners available during test runtime -->
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>target-platform-configuration</artifactId>
